deploy RandomApi app in github

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Dineshkumar510.github.io/Random_person_API",
+  "homepage": "http://Dineshkumar510.github.io/React-RandomPersonApi",
   "name": "randompersonapi",
   "version": "0.1.0",
   "private": true,
